@@ -16,34 +16,67 @@
 
 "?" <- function(e1, e2)
 {
-    e1Expr <- substitute(e1)
-    if(missing(e2)) {
-        if(is.call(e1Expr)) {
-            if(e1Expr[[1]] == "::" || e1Expr[[1]] == ":::")
-                return(eval(substitute(help(TOPIC, package=PACKAGE),
-                                       list(TOPIC = e1Expr[[3]],
-                                            PACKAGE = e1Expr[[2]]))))
-            return(.helpForCall(e1Expr, parent.frame()))
-        }
-        if(is.name(e1Expr))
-            e1 <- as.character(e1Expr)
-        eval(substitute(help(TOPIC), list(TOPIC = e1)))
-    }
-    else {
-        ## interpret e1 as a type, but to allow customization, do NOT
-        ## force arbitrary expressions to be single character strings
-        ## (so that methods can be defined for topicName).
-        if(is.name(e1Expr))
-            e1 <- as.character(e1Expr)
-        e2Expr <- substitute(e2)
-        if(is.name(e2Expr))
-            e2 <- as.character(e2Expr)
-        else if(is.call(e2Expr) && identical(e1, "method"))
-            return(.helpForCall(e2Expr, parent.frame(), FALSE))
-        topic <- topicName(e1, e2)
-        doHelp <- .tryHelp(topic)
-        if(inherits(doHelp, "try-error")) {
-            stop(gettextf("no documentation of type '%s' and topic '%s' (or error in processing help)", e1, e2), domain = NA)
+    if (missing(e2)) {
+        type <- NULL
+    	topicExpr <- substitute(e1)
+    } else {
+     	type <- substitute(e1)
+     	topicExpr <- substitute(e2)
+    } 	
+    if (is.call(topicExpr) && topicExpr[[1]] == "?") {
+            # ??foo is parsed as `?`(`?`(foo))
+            	search <- TRUE
+            	topicExpr <- topicExpr[[2]]
+            } else 
+            	search <- FALSE
+
+    if (is.call(topicExpr) && (topicExpr[[1]] == "::" || topicExpr[[1]] == ":::")) {
+		package <- as.character(topicExpr[[2]])
+		topicExpr <- topicExpr[[3]]
+	    } else 
+		package <- NULL
+
+    if (search) {
+	if (is.null(type))
+	    return(eval(substitute(help.search(TOPIC, package = PACKAGE), 
+							list(TOPIC = as.character(topicExpr),
+							      PACKAGE = package))))
+	else
+	    return(eval(substitute(help.search(TOPIC, fields = FIELD, package = PACKAGE),
+	    						list(TOPIC = as.character(topicExpr),
+	    						      FIELD = as.character(type),
+	    						      PACKAGE = package))))
+    } else {
+        if (is.null(type)) {
+	    if (is.call(topicExpr))
+		return(.helpForCall(topicExpr, parent.frame()))
+	    if (is.name(topicExpr))
+	    	topic <- as.character(topicExpr)
+	    else
+	    	topic <- e1
+	    return(eval(substitute(help(TOPIC, package = PACKAGE), 
+							list(TOPIC = topic,
+							      PACKAGE = package))))
+	} else {
+	    ## interpret e1 as a type, but to allow customization, do NOT
+            ## force arbitrary expressions to be single character strings
+            ## (so that methods can be defined for topicName).	    
+            if (is.name(type))
+		type <- as.character(type)
+	    else
+		type <- e1
+	    if (is.name(topicExpr))
+		topic <- as.character(topicExpr)
+            else {
+            	if (is.call(topicExpr) && identical(type, "method"))
+            	    return(.helpForCall(topicExpr, parent.frame(), FALSE))
+            	topic <- e2
+	    }   
+	    topic <- topicName(type, topic)
+	    doHelp <- .tryHelp(topic, package = package)
+	    if(inherits(doHelp, "try-error")) {
+		stop(gettextf("no documentation of type '%s' and topic '%s' (or error in processing help)", e1, e2), domain = NA)
+            }
         }
     }
 }
@@ -123,11 +156,11 @@ topicName <- function(type, topic)
     }
 }
 
-.tryHelp <- function(topic) {
+.tryHelp <- function(topic, package = NULL) {
     opts <- options(error = function() TRUE,
                     show.error.messages = FALSE)
     on.exit(options(opts))
-    x <- try(do.call("help", list(topic)))
+    x <- try(do.call("help", list(topic, package = package)))
     ## If something was found, actually show it via print().
     ## Otherwise, give an error.
     if(!inherits(x, "try-error") && length(x))
